2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj: 

	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor.PopupWindow/ListWindow.cs:
	* Mono.TextEditor.PopupWindow/ListWidget.cs:
	* Mono.TextEditor.PopupWindow/IListDataProvider.cs: Fixed
	  headers.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor.PopupWindow/ListWindow.cs:
	* Mono.TextEditor.PopupWindow/IListDataProvider.cs: Used
	  template data provider.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj: 

	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor.PopupWindow/ListWindow.cs:
	* Mono.TextEditor.PopupWindow/IListDataProvider.cs: Changed
	  list provider interface.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Styles/BrownStyle.xml:
	* Styles/OblivionStyle.xml:
	* Styles/TangoLightStyle.xml: Updated template colors (but I'm
	  up for color suggestions).

	* Mono.TextEditor/TextLinkEditMode.cs: Fixed some minor issues
	  in text link mode.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor.PopupWindow/ListWindow.cs: Added icons to
	  the template completion list.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Worked on templates.

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Worked on template
	  callbacks.

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Worked on multi item
	  callback.

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor.PopupWindow/ListWindow.cs: Worked on text
	  link mode.

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Styles/C64Style.xml:
	* Styles/BrownStyle.xml:
	* Mono.TextEditor.csproj:
	* Styles/OblivionStyle.xml:
	* Mono.TextEditor/Caret.cs: